delete icon added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".SingleBook"
             android:exported="true" />
         <activity
-            android:name=".AllBooks"
+            android:name=".BookCategory"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
