--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,19 @@
     package="com.example.gps">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".MyLocation"
         android:allowBackup="true"
         android:icon="@mipmap/images"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/images"
         android:supportsRtl="true"
         android:theme="@style/Theme.GPS">
+        <activity
+            android:name=".ShowLocationsActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
