--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyLocation"
@@ -32,11 +33,10 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MyMap"
-            android:exported="true"
-            android:label="@string/title_activity_my_map" />
-        <activity
             android:name=".ShowLocationsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MyMap"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
